--- a/Lesson7-8/index.html
+++ b/Lesson7-8/index.html
@@ -35,14 +35,14 @@
 
     <div class="clearfix">
       <span class="logo">pingbull<span class="er">er</span></span>
-      <ul class="menu">
-        <li class="menu__item"><a href="#" class="menu__link">dolor sit amet</a></li>
-        <li class="menu__item"><a href="#" class="menu__link">lorem ipsum</a></li>
-        <li class="menu__item"><a href="#" class="menu__link">produkts</a></li>
-        <li class="menu__item"><a href="#" class="menu__link">blog</a></li>
-        <li class="menu__item"><a href="#" class="menu__link">about</a></li>
-        <li class="menu__item"><a href="#" class="menu__link">home</a></li>
-      </ul>
+      <menu class="main clearfix">
+        <li class="main__item"><a href="#" class="main__link">Home</a></li>
+        <li class="main__item"><a href="#" class="main__link">About</a></li>
+        <li class="main__item"><a href="#" class="main__link">Blog</a></li>
+        <li class="main__item"><a href="#" class="main__link">Products</a></li>
+        <li class="main__item"><a href="#" class="main__link">Lorem Ipsum</a></li>
+        <li class="main__item"><a href="#" class="main__link">Dolor Sit Amet</a></li>
+      </menu>
     </div>
 
       <ul class="news clearfix">
