--- a/Lesson7-8/index.html
+++ b/Lesson7-8/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en">
 
@@ -36,7 +36,7 @@
     <div class="clearfix">
       <span class="logo">pingbull<span class="er">er</span></span>
       <menu class="main clearfix">
-        <li class="main__item"><a href="#" class="main__link">Home</a></li>
+        <li class="main__item active"><a href="#" class="main__link">Home</a></li>
         <li class="main__item"><a href="#" class="main__link">About</a></li>
         <li class="main__item"><a href="#" class="main__link">Blog</a></li>
         <li class="main__item"><a href="#" class="main__link">Products</a></li>
