--- a/Lesson7-8/index.html
+++ b/Lesson7-8/index.html
@@ -34,7 +34,7 @@
   <header>
 
     <div class="clearfix">
-      <span class="logo">pingbull<span class="er">er</span></span>
+      <span class="logo"><a href="#" class="logo"></a>pingbull<span class="er">er<a href="#" class="logo"></a></span></span>
       <menu class="main clearfix">
         <li class="main__item active"><a href="#" class="main__link">Home</a></li>
         <li class="main__item"><a href="#" class="main__link">About</a></li>
