--- a/Lesson9/index.html
+++ b/Lesson9/index.html
@@ -24,15 +24,15 @@
 <div class="wrapper">
   <div class="header">
     <div class="clearfix">
-      <span class="logo">pingbull<span class="er">er</span></span>
-      <ul class="main clearfix">
+      <span class="logo"><a href="#" class="logotip">pingbull</a><span class="er"><a href="#" class="logotip1">er</a></span></span>
+      <menu class="main clearfix">
         <li class="main__item active"><a href="#" class="main__link">Home</a></li>
         <li class="main__item"><a href="#" class="main__link">About</a></li>
         <li class="main__item"><a href="#" class="main__link">Blog</a></li>
         <li class="main__item"><a href="#" class="main__link">Products</a></li>
         <li class="main__item"><a href="#" class="main__link">Lorem Ipsum</a></li>
         <li class="main__item"><a href="#" class="main__link">Dolor Sit Amet</a></li>
-      </ul>
+      </menu>
     </div>
       <ul class="news clearfix">
         <form action="#">
