--- a/JS1/index.html
+++ b/JS1/index.html
@@ -1,13 +1,13 @@
 ﻿<!DOCTYPE html>
 <head>
   <meta charset="UTF-8">
-  <title>JavaScript Homework 1</title>
+  <title>JavaScript Homework 1-2</title>
   <script async="true" src="js/script.js"></script>
 </head>
 <body>
-  <ol>
+  <up>
     <li>Возведение числа в степень (целые числа, 0)</li>
     <li>Подобие авторизации - поиск имени в массиве</li>
-  </ol>
+  </ul>
 </body>
 </html>
