--- a/JS1/index.html
+++ b/JS1/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <title>JavaScript Homework 1-2</title>
-  <script async="true" src="js/script.js"></script>
+  <script src="js/script.js"></script>
 </head>
 <body>
   <up>
