--- a/JS1/index.html
+++ b/JS1/index.html
@@ -2,6 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <title>JavaScript Homework 1-2</title>
+  <script async="true" src="js/script.js"></script>
 </head>
 
 <body>
@@ -10,8 +11,6 @@
     <li>Возведение числа в степень (целые числа, 0)</li>
     <li>Подобие авторизации - поиск имени в массиве</li>
   </ol>
-  
-  <script src="js/script.js"></script>
   
 </body>
 </html>
