--- a/JS3-4/index.html
+++ b/JS3-4/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JavaScript Homework2</title>
+  <title>JavaScript Homework 3-4</title>
   <link rel="stylesheet" href="css/style.css">
   <script async="true" src="js/script.js"></script>
 </head>
+
 <body>
 </body>
+
 </html>
