--- a/JS7-8/index.html
+++ b/JS7-8/index.html
@@ -42,7 +42,7 @@
           <h3>JavaScript Homework 7-8</h3>
           <p class="padding"></p>
           <p>If you want see the code just
-          <a href="https://github.com/imsia" class="link">use this link ;-)</a></p>
+          <a href="https://github.com/imsia/imsia.github.io/tree/master/JS7-8" class="link">use this link ;-)</a></p>
         </div>
       </div>
     </div>
