--- a/JS11-12/index.html
+++ b/JS11-12/index.html
@@ -73,7 +73,7 @@
       <div class="mainbox">
         <h1><%= name %></h1>
           <div class="photo">
-              <img src= "../img/photo.JPG" alt="My Photo" />
+              <img src= <%= photoURL %> alt="My Photo" />
           </div>
           <p><%= profession %></p>
         <hr>
