--- a/JS11-12/index.html
+++ b/JS11-12/index.html
@@ -17,51 +17,51 @@
     <div class="myCarousel">
       <ul class="myCarousel-list">
         <li class="myCarousel-element">
-          <img src="http://tel.by/uploads/posts/2012-03/1331819816_apple_tech.jpg" alt="">
+          <img src="http://mobiliv.ru/_ph/139/2/980735426.jpg?1463527792" alt="">
           <p>Описание 1</p>
         </li>
         <li class="myCarousel-element">
-          <img src="http://tel.by/uploads/posts/2012-03/1331819765_bat_design.jpg" alt="">
+          <img src="http://mobiliv.ru/_ph/139/2/306041332.jpg" alt="">
           <p>Описание 2</p>
         </li>
         <li class="myCarousel-element">
-          <img src="http://tel.by/uploads/posts/2012-03/1331819834_batman_dark.jpg" alt="">
+          <img src="http://mobiliv.ru/_ph/139/2/511852459.jpg" alt="">
           <p>Описание 3</p>
         </li>
         <li class="myCarousel-element">
-          <img src="http://tel.by/uploads/posts/2012-03/1331819767_city_lights.jpg" alt="">
+          <img src="http://mobiliv.ru/_ph/139/2/300021494.jpg" alt="">
           <p>Описание 4</p>
         </li>
         <li class="myCarousel-element">
-          <img src="http://tel.by/uploads/posts/2012-03/1331819804_colors.jpg" alt="">
+          <img src="http://mobiliv.ru/_ph/139/2/907987069.jpg" alt="">
           <p>Описание 5</p>
         </li>
         <li class="myCarousel-element">
-          <img src="http://www.smartphoneforums.com/wallpaper/data/505/320x240-Gone_Nuclear.jpg" alt="">
+          <img src="http://mobiliv.ru/_ph/139/2/944505598.jpg" alt="">
           <p>Описание 6</p>
         </li>
         <li class="myCarousel-element">
-          <img src="http://www.smartphoneforums.com/wallpaper/data/505/320x240-Biohazard.jpg" alt="">
+          <img src="http://www.hdiphonewallpapers.us/phone-wallpapers/iphone/12954E222560Z-44X3.jpg" alt="">
           <p>Описание 7</p>
         </li>
         <li class="myCarousel-element">
-          <img src="http://www.smartphoneforums.com/wallpaper/data/505/320x240-Looneytunes.jpg" alt="">
+          <img src="http://www.hdiphonewallpapers.us/phone-wallpapers/iphone/12954DAX2560-13446.jpg" alt="">
           <p>Описание 8</p>
         </li>
         <li class="myCarousel-element">
-          <img src="http://www.smartphoneforums.com/wallpaper/data/505/320x240-Blue_Abstract.jpg" alt="">
+          <img src="http://www.hdiphonewallpapers.us/phone-wallpapers/iphone/12954GY425O0-395Z.jpg" alt="">
           <p>Описание 9</p>
         </li>
         <li class="myCarousel-element">
-          <img src="http://www.smartphoneforums.com/wallpaper/data/505/320x240-Zenvo_St1.jpg" alt="">
+          <img src="http://www.hdiphonewallpapers.us/phone-wallpapers/iphone/12954E543245Z-15447.jpg" alt="">
           <p>Описание 10</p>
         </li>
         <li class="myCarousel-element">
-          <img src="http://www.smartphoneforums.com/wallpaper/data/505/320x240-Eat_Them_Up.jpg" alt="">
+          <img src="http://www.hdiphonewallpapers.us/phone-wallpapers/iphone/12954E33K350-2RO.jpg" alt="">
           <p>Описание 11</p>
         </li>
         <li class="myCarousel-element">
-          <img src="http://www.smartphoneforums.com/wallpaper/data/505/320x240-Halloweenjack.jpg" alt="">
+          <img src="http://www.hdiphonewallpapers.us/phone-wallpapers/iphone/12954E134414Z-24563.jpg" alt="">
           <p>Описание 12</p>
         </li>
       </ul>
