--- a/JS17-18/index.html
+++ b/JS17-18/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="build/css/slick.css">
     <link rel="stylesheet" href="build/css/slick-theme.css">
     <link rel="stylesheet" href="build/css/style.css">
-  <title>SCSS, lodash</title>
+  <title>JavaScript Homework 17-18</title>
 </head>
 <body>
 <div class="wrapper first">
@@ -225,11 +225,11 @@
           </li>
           <li class="author__phone">
             <div class="author__sprite2"></div>
-            + 123 900 123 456
+            + 123 900 123 456 <a href="#">
           </li>
           <li class="author__email">
             <div class="author__sprite3"></div>
-            info@buildhome.web
+            info@buildhome.web <a href="#">
           </li>
           <li class="author__copy">
             &copy; 2014 Build Home
