--- a/JS17-18/index.html
+++ b/JS17-18/index.html
@@ -225,11 +225,11 @@
           </li>
           <li class="author__phone">
             <div class="author__sprite2"></div>
-            + 123 900 123 456 <a href="#">
+            + 123 900 123 456 
           </li>
           <li class="author__email">
             <div class="author__sprite3"></div>
-            info@buildhome.web <a href="#">
+            info@buildhome.web 
           </li>
           <li class="author__copy">
             &copy; 2014 Build Home
