--- a/JS21-22/index.html
+++ b/JS21-22/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JavaScript Homework 21-22</title>
+  <title>Tests</title>
   <link rel="stylesheet" href="css/style.css">
 
   <script src="https://code.jquery.com/jquery-2.2.3.min.js" charset="utf-8"></script>
