--- a/JS23-24/index.html
+++ b/JS23-24/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ToDo List</title>
+  <title>JS Homework 23-24</title>
   <link rel="stylesheet" href="css/style.css">
   <script data-main="js/app" src="js/require.js"></script>
 </head>
