--- a/JS15-16/index.html
+++ b/JS15-16/index.html
@@ -1,8 +1,8 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Ajax</title>
+  <title>JavaScript Homework 15-16</title>
   <script src="https://code.jquery.com/jquery-2.2.3.min.js" charset="utf-8"></script>
   <script src="js/script.js" charset="utf-8"></script>
   <link rel="stylesheet" href="css/style.css">
@@ -18,5 +18,3 @@
 </div>
 </body>
 </html>
-Status API Training Shop Blog About
-© 2016 GitHub, Inc. Terms Privacy Security Contact Help
