--- a/JS15-16/index.html
+++ b/JS15-16/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>JavaScript Homework 15-16</title>
   <script src="https://code.jquery.com/jquery-2.2.3.min.js" charset="utf-8"></script>
-  <script src="js/script.js" charset="utf-8"></script>
+  <script src="js/script.js"></script>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
