--- a/FinalExam/index.html
+++ b/FinalExam/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="MobileOptimized" content="320">
   <title>Urlaubsglück</title>
   <link rel="stylesheet" href="build/css/style.css" media="screen" title="no title" charset="utf-8">
 
+  <script src="src/js/retina.min.js" charset="utf-8"></script>
   <script src="src/js/masonry.pkgd.min.js" charset="utf-8"></script>
   <script src="src/js/slider.js" charset="utf-8"></script>
   <script src="src/js/script.js" charset="utf-8"></script>
@@ -43,13 +45,13 @@
 
 <div class="wrapper">
 
-    <section class="howItWorks">
+    <section class="howItWorks clearfix">
       <h1 class="hiw__title">How Urlaubsglück works?</h1>
 
       <div class="slider slider1">
         <div class="slider__controls">
-          <img src="img/la.png" class="slider__prev" alt="swipe left" />
-          <img src="img/ra.png" class="slider__next" alt="swipe right" />
+          <img src="build/img/la.png" class="slider__prev" alt="swipe left" />
+          <img src="build/img/ra.png" class="slider__next" alt="swipe right" />
         </div>
         <ul class="slider__wrapper clearfix">
           <li class="slider__slide">
@@ -72,8 +74,8 @@
   <div class="margin-div"></div>
       <div class="slider slider2">
         <div class="slider__controls">
-          <img src="img/la.png" class="slider__prev" alt="swipe left" />
-          <img src="img/ra.png" class="slider__next" alt="swipe right" />
+          <img src="build/img/la.png" class="slider__prev" alt="swipe left" />
+          <img src="build/img/ra.png" class="slider__next" alt="swipe right" />
         </div>
         <ul class="slider__wrapper clearfix">
           <li class="slider__slide">
@@ -96,8 +98,8 @@
 <div class="margin-div"></div>
       <div class="slider slider3">
         <div class="slider__controls">
-          <img src="img/la.png" class="slider__prev" alt="swipe left" />
-          <img src="img/ra.png" class="slider__next" alt="swipe right" />
+          <img src="build/img/la.png" class="slider__prev" alt="swipe left" />
+          <img src="build/img/ra.png" class="slider__next" alt="swipe right" />
         </div>
         <ul class="slider__wrapper clearfix">
           <li class="slider__slide">
@@ -121,10 +123,11 @@
 
     <section class="peoples">
       <h1 class="peoples__title">Meet a partner for your best holiday</h1>
+      <div class="clearfix">
       <div class="peoples__partner">
         <div class="peoples__portrait-wrapper">
-          <div class="peoples__portrait-hider"><img src="img/1.png" alt="" class="peoples__portrait"></div>
-          <img src="img/tv.png" alt="" class="peoples__portrait-icon">
+          <div class="peoples__portrait-hider"><img src="build/img/1.png" alt="" class="peoples__portrait"></div>
+          <div class="peoples__portrait-icon tv"></div>
         </div>
         <h2 class="peoples__name">Bradley Hunter</h2>
         <p class="peoples__about">Based in Chicago. I love playing tennis and loud music.</p>
@@ -132,8 +135,8 @@
 
       <div class="peoples__partner">
         <div class="peoples__portrait-wrapper">
-          <div class="peoples__portrait-hider"><img src="img/2.png" alt="" class="peoples__portrait"></div>
-          <img src="img/coffee.png" alt="" class="peoples__portrait-icon">
+          <div class="peoples__portrait-hider"><img src="build/img/2.png" alt="" class="peoples__portrait"></div>
+          <div class="peoples__portrait-icon coffee"></div>
         </div>
         <h2 class="peoples__name">Heather Walker</h2>
         <p class="peoples__about">I'm a happy person that loves cats and climbing on mountains.</p>
@@ -141,8 +144,8 @@
 
       <div class="peoples__partner">
         <div class="peoples__portrait-wrapper">
-          <div class="peoples__portrait-hider"><img src="img/3.png" alt="" class="peoples__portrait"></div>
-          <img src="img/chemistry.png" alt="" class="peoples__portrait-icon">
+          <div class="peoples__portrait-hider"><img src="build/img/3.png" alt="" class="peoples__portrait"></div>
+          <div class="peoples__portrait-icon chemistry"></div>
         </div>
         <h2 class="peoples__name">Lucas Marsha</h2>
         <p class="peoples__about">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
@@ -150,13 +153,14 @@
 
       <div class="peoples__partner">
         <div class="peoples__portrait-wrapper">
-          <div class="peoples__portrait-hider"><img src="img/4.png" alt="" class="peoples__portrait"></div>
-          <img src="img/airplane.png" alt="" class="peoples__portrait-icon">
+          <div class="peoples__portrait-hider"><img src="build/img/4.png" alt="" class="peoples__portrait"></div>
+          <div class="peoples__portrait-icon airplane"></div>
         </div>
         <h2 class="peoples__name">Bradley Hunter</h2>
         <p class="peoples__about">Based in Chicago. I love playing tennis and loud music.</p>
       </div>
 
+      </div>
       <a href="#" id="other-partners">See other partners</a>
     </section>
     <section class="discover">
@@ -178,7 +182,7 @@
       <div class="discover__newImages">
         <h2 class="discover__title">Discover holiday activity ideas</h2>
         <p class="discover__text">Hi! What are your holiday interests?</p>
-        <form class="discover__form" action="#" method="get">
+        <form class="discover__form clearfix" action="#" method="get">
           <input type="text" class="discover__tag" id="searchTag" placeholder="Enter your interests">
           <input type="button" class="discover__submit" value="Search partners">
         </form>
@@ -203,7 +207,7 @@
 
         <div class="designed">
           <span class="designedby">DESIGNED BY</span>
-          <img src="img/areto.png" alt="">
+          <img src="build/img/areto.png" alt="">
         </div>
       </div>
     </footer>
